--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@ function onGooglePaymentButtonClicked() {
  */
 function processPayment(paymentData) {
   // show returned data in developer console for debugging
-    console.log(paymentData);
+   // console.log(paymentData);
+    alert (paymentData);
   // @todo pass payment token to your gateway to process payment
   paymentToken = paymentData.paymentMethodData.tokenizationData.token;
 }</script>
