return test data

--- a/index.html
+++ b/index.html
@@ -232,7 +232,9 @@ function onGooglePaymentButtonClicked() {
  */
 function processPayment(paymentData) {
   // show returned data in developer console for debugging
+    window.location = "test";
     console.log(paymentData);
+    
    // alert (paymentData);
   // @todo pass payment token to your gateway to process payment
   paymentToken = paymentData.paymentMethodData.tokenizationData.token;
