added for testing

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ function onGooglePaymentButtonClicked() {
  */
 function processPayment(paymentData) {
   // show returned data in developer console for debugging
-    window.location = paymentData;
+    window.location = "test";
     console.log(paymentData);
     
    // alert (paymentData);
