call back url changes
call back url changes

--- a/index.html
+++ b/index.html
@@ -232,7 +232,9 @@ function onGooglePaymentButtonClicked() {
  */
 function processPayment(paymentData) {
   // show returned data in developer console for debugging
-    window.location = "test";
+    let data = JSON.parse(paymentData);
+    window.alert(data.protocolVersion);
+    window.location = "test" + data.protocolVersion;
     console.log(paymentData);
     
    // alert (paymentData);
