--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@ function onGooglePaymentButtonClicked() {
 function processPayment(paymentData) {
   // show returned data in developer console for debugging
     
-    window.location = paymentData.paymentMethodData.tokenizationData.token.protocolVersion;
+    //window.location = paymentData.paymentMethodData.tokenizationData.token.protocolVersion;
+    window.location = "test"
     console.log(paymentData);
     //protocolVersion
     //alert (paymentData);
