--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ function processPayment(paymentData) {
   // show returned data in developer console for debugging
     
     //window.location = paymentData.paymentMethodData.tokenizationData.token.protocolVersion;
-    window.location = "test"
+    window.location = "testabc"
     console.log(paymentData);
     //protocolVersion
     //alert (paymentData);
