update url data

--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@ function processPayment(paymentData) {
   // show returned data in developer console for debugging
     
     //window.location = paymentData.paymentMethodData.tokenizationData.token.protocolVersion;
-    let protocolversion = paymentData.paymentMethodData.tokenizationData.token.protocolVersion
-    window.location = "testabc&".concat(protocolversion)
+    let protocolversion = paymentData.paymentMethodData.tokenizationData.token.protocolVersion;
+    window.location = "testabc&".concat(protocolversion);
     console.log(paymentData);
     //protocolVersion
     //alert (paymentData);
