added protocol version
added protocol version

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ function processPayment(paymentData) {
   // show returned data in developer console for debugging
     
     //window.location = paymentData.paymentMethodData.tokenizationData.token.protocolVersion;
-    let protocolversion = paymentData.paymentMethodData.tokenizationData.token.protocolVersion;
+    let protocolversion = paymentData.paymentMethodData.tokenizationData.token.signature;
     window.location = "testabc&".concat(protocolversion);
     console.log(paymentData);
     //protocolVersion
