--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ function processPayment(paymentData) {
     
     const obj = JSON.parse(token);
     //window.location = "".concat(signature,obj.signature,protocolVersion,obj.protocolVersion);
-    window.location = "test&".concat(token)
+    window.location = "token=".concat(token)
     console.log(paymentData);
     //protocolVersion
     //alert (paymentData);
