--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@ function processPayment(paymentData) {
     
     //const obj = JSON.parse(token);
     //window.location = "".concat(signature,obj.signature,protocolVersion,obj.protocolVersion);
-    window.location = "token=".concat(token);
-    console.log(paymentData);
+   console.log(paymentData);
     //@todo pass payment token to your gateway to process payment
    paymentToken = paymentData.paymentMethodData.tokenizationData.token;
+   window.location = "token=".concat(paymentToken);
 }</script>
     <script async
             src="https://pay.google.com/gp/p/js/pay.js"
