--- a/index.html
+++ b/index.html
@@ -1,251 +1,319 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        #container {
+          width: 500px;
+          height: 50px;
+        }
+    </style>
     <meta charset="utf-8" />
     <title></title>
+
 </head>
 <body>
+
     <div id="container"></div>
 
-    <script>/**
- * Define the version of the Google Pay API referenced when creating your
- * configuration
- *
- * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#PaymentDataRequest|apiVersion in PaymentDataRequest}
- */
-const baseRequest = {
-  apiVersion: 2,
-  apiVersionMinor: 0
-};
+    <script>
+    /**
+     * Define the version of the Google Pay API referenced when creating your
+     * configuration
+     *
+     * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#PaymentDataRequest|apiVersion in PaymentDataRequest}
+     */
+    const baseRequest = {
+      apiVersion: 2,
+      apiVersionMinor: 0
+    };
 
-/**
- * Card networks supported by your site and your gateway
- *
- * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#CardParameters|CardParameters}
- * @todo confirm card networks supported by your site and gateway
- */
-const allowedCardNetworks = ["AMEX", "DISCOVER", "INTERAC", "JCB", "MASTERCARD", "VISA"];
+    /**
+     * Card networks supported by your site and your gateway
+     *
+     * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#CardParameters|CardParameters}
+     * @todo confirm card networks supported by your site and gateway
+     */
+    const allowedCardNetworks = ["AMEX", "DISCOVER", "INTERAC", "JCB", "MASTERCARD", "VISA"];
 
-/**
- * Card authentication methods supported by your site and your gateway
- *
- * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#CardParameters|CardParameters}
- * @todo confirm your processor supports Android device tokens for your
- * supported card networks
- */
-const allowedCardAuthMethods = ["PAN_ONLY", "CRYPTOGRAM_3DS"];
+    /**
+     * Card authentication methods supported by your site and your gateway
+     *
+     * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#CardParameters|CardParameters}
+     * @todo confirm your processor supports Android device tokens for your
+     * supported card networks
+     */
+    const allowedCardAuthMethods = ["PAN_ONLY", "CRYPTOGRAM_3DS"];
 
-/**
- * Identify your gateway and your site's gateway merchant identifier
- *
- * The Google Pay API response will return an encrypted payment method capable
- * of being charged by a supported gateway after payer authorization
- *
- * @todo check with your gateway on the parameters to pass
- * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#gateway|PaymentMethodTokenizationSpecification}
- */
-const tokenizationSpecification = {
-  type: 'PAYMENT_GATEWAY',
-  parameters: {
-    'gateway': 'worldpay',
-    'gatewayMerchantId': '08ad021bd7bca75'
-  }
-};
-
-/**
- * Describe your site's support for the CARD payment method and its required
- * fields
- *
- * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#CardParameters|CardParameters}
- */
-const baseCardPaymentMethod = {
-  type: 'CARD',
-  parameters: {
-    allowedAuthMethods: allowedCardAuthMethods,
-    allowedCardNetworks: allowedCardNetworks
-  }
-};
-
-/**
- * Describe your site's support for the CARD payment method including optional
- * fields
- *
- * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#CardParameters|CardParameters}
- */
-const cardPaymentMethod = Object.assign(
-  {},
-  baseCardPaymentMethod,
-  {
-    tokenizationSpecification: tokenizationSpecification
-  }
-);
-
-/**
- * An initialized google.payments.api.PaymentsClient object or null if not yet set
- *
- * @see {@link getGooglePaymentsClient}
- */
-let paymentsClient = null;
-
-/**
- * Configure your site's support for payment methods supported by the Google Pay
- * API.
- *
- * Each member of allowedPaymentMethods should contain only the required fields,
- * allowing reuse of this base request when determining a viewer's ability
- * to pay and later requesting a supported payment method
- *
- * @returns {object} Google Pay API version, payment methods supported by the site
- */
-function getGoogleIsReadyToPayRequest() {
-  return Object.assign(
-      {},
-      baseRequest,
-      {
-        allowedPaymentMethods: [baseCardPaymentMethod]
+    /**
+     * Identify your gateway and your site's gateway merchant identifier
+     *
+     * The Google Pay API response will return an encrypted payment method capable
+     * of being charged by a supported gateway after payer authorization
+     *
+     * @todo check with your gateway on the parameters to pass
+     * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#gateway|PaymentMethodTokenizationSpecification}
+     */
+    const tokenizationSpecification = {
+      type: 'PAYMENT_GATEWAY',
+      parameters: {
+        'gateway': 'worldpay',
+        'gatewayMerchantId': '08ad021bd7bca75'
       }
-  );
-}
+    };
 
-/**
- * Configure support for the Google Pay API
- *
- * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#PaymentDataRequest|PaymentDataRequest}
- * @returns {object} PaymentDataRequest fields
- */
-function getGooglePaymentDataRequest() {
-  const paymentDataRequest = Object.assign({}, baseRequest);
-  paymentDataRequest.allowedPaymentMethods = [cardPaymentMethod];
-  paymentDataRequest.transactionInfo = getGoogleTransactionInfo();
-  paymentDataRequest.merchantInfo = {
-    // @todo a merchant ID is available for a production environment after approval by Google
-    // See {@link https://developers.google.com/pay/api/web/guides/test-and-deploy/integration-checklist|Integration checklist}
-    merchantId: '12345678901234567890',
-    merchantName: 'Example Merchant'
-  };
-  return paymentDataRequest;
-}
+    /**
+     * Describe your site's support for the CARD payment method and its required
+     * fields
+     *
+     * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#CardParameters|CardParameters}
+     */
+    const baseCardPaymentMethod = {
+      type: 'CARD',
+      parameters: {
+        allowedAuthMethods: allowedCardAuthMethods,
+        allowedCardNetworks: allowedCardNetworks
+      }
+    };
 
-/**
- * Return an active PaymentsClient or initialize
- *
- * @see {@link https://developers.google.com/pay/api/web/reference/client#PaymentsClient|PaymentsClient constructor}
- * @returns {google.payments.api.PaymentsClient} Google Pay API client
- */
-function getGooglePaymentsClient() {
-  if ( paymentsClient === null ) {
-    paymentsClient = new google.payments.api.PaymentsClient({environment: 'TEST'});
-  }
-  return paymentsClient;
-}
+    /**
+     * Describe your site's support for the CARD payment method including optional
+     * fields
+     *
+     * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#CardParameters|CardParameters}
+     */
+    const cardPaymentMethod = Object.assign(
+      {},
+      baseCardPaymentMethod,
+      {
+        tokenizationSpecification: tokenizationSpecification
+      }
+    );
 
-/**
- * Initialize Google PaymentsClient after Google-hosted JavaScript has loaded
- *
- * Display a Google Pay payment button after confirmation of the viewer's
- * ability to pay.
- */
-function onGooglePayLoaded() {
-  const paymentsClient = getGooglePaymentsClient();
-  paymentsClient.isReadyToPay(getGoogleIsReadyToPayRequest())
-      .then(function(response) {
-        if (response.result) {
-          addGooglePayButton();
-          // @todo prefetch payment data to improve performance after confirming site functionality
-          // prefetchGooglePaymentData();
-        }
-      })
-      .catch(function(err) {
-        // show error in developer console for debugging
-        console.error(err);
-      });
-}
+    /**
+     * An initialized google.payments.api.PaymentsClient object or null if not yet set
+     *
+     * @see {@link getGooglePaymentsClient}
+     */
+    let paymentsClient = null;
 
-/**
- * Add a Google Pay purchase button alongside an existing checkout button
- *
- * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#ButtonOptions|Button options}
- * @see {@link https://developers.google.com/pay/api/web/guides/brand-guidelines|Google Pay brand guidelines}
- */
-function addGooglePayButton() {
-  const paymentsClient = getGooglePaymentsClient();
-  const button =
-      paymentsClient.createButton({onClick: onGooglePaymentButtonClicked});
-  document.getElementById('container').appendChild(button);
-}
+    /**
+     * Configure your site's support for payment methods supported by the Google Pay
+     * API.
+     *
+     * Each member of allowedPaymentMethods should contain only the required fields,
+     * allowing reuse of this base request when determining a viewer's ability
+     * to pay and later requesting a supported payment method
+     *
+     * @returns {object} Google Pay API version, payment methods supported by the site
+     */
+    function getGoogleIsReadyToPayRequest() {
+      return Object.assign(
+          {},
+          baseRequest,
+          {
+            allowedPaymentMethods: [baseCardPaymentMethod]
+          }
+      );
+    }
 
-/**
- * Provide Google Pay API with a payment amount, currency, and amount status
- *
- * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#TransactionInfo|TransactionInfo}
- * @returns {object} transaction info, suitable for use as transactionInfo property of PaymentDataRequest
- */
-function getGoogleTransactionInfo() {
-  return {
-    countryCode: 'US',
-    currencyCode: 'USD',
-    totalPriceStatus: 'FINAL',
-    // set to cart total
-    totalPrice: '1.00'
-  };
-}
+    /**
+     * Configure support for the Google Pay API
+     *
+     * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#PaymentDataRequest|PaymentDataRequest}
+     * @returns {object} PaymentDataRequest fields
+     */
+    function getGooglePaymentDataRequest() {
+      const paymentDataRequest = Object.assign({}, baseRequest);
+      paymentDataRequest.allowedPaymentMethods = [cardPaymentMethod];
+      paymentDataRequest.transactionInfo = getGoogleTransactionInfo();
+      paymentDataRequest.merchantInfo = {
+        // @todo a merchant ID is available for a production environment after approval by Google
+        // See {@link https://developers.google.com/pay/api/web/guides/test-and-deploy/integration-checklist|Integration checklist}
+        merchantId: '01234567890123456789',
+        merchantName: 'Example Merchant'
+      };
 
-/**
- * Prefetch payment data to improve performance
- *
- * @see {@link https://developers.google.com/pay/api/web/reference/client#prefetchPaymentData|prefetchPaymentData()}
- */
-function prefetchGooglePaymentData() {
-  const paymentDataRequest = getGooglePaymentDataRequest();
-  // transactionInfo must be set but does not affect cache
-  paymentDataRequest.transactionInfo = {
-    totalPriceStatus: 'NOT_CURRENTLY_KNOWN',
-    currencyCode: 'USD'
-  };
-  const paymentsClient = getGooglePaymentsClient();
-  paymentsClient.prefetchPaymentData(paymentDataRequest);
-}
+      paymentDataRequest.callbackIntents = ["PAYMENT_AUTHORIZATION"];
 
-/**
- * Show Google Pay payment sheet when Google Pay payment button is clicked
- */
-function onGooglePaymentButtonClicked() {
-  const paymentDataRequest = getGooglePaymentDataRequest();
-  paymentDataRequest.transactionInfo = getGoogleTransactionInfo();
+      return paymentDataRequest;
+    }
 
-  const paymentsClient = getGooglePaymentsClient();
-  paymentsClient.loadPaymentData(paymentDataRequest)
-      .then(function(paymentData) {
+    /**
+     * Return an active PaymentsClient or initialize
+     *
+     * @see {@link https://developers.google.com/pay/api/web/reference/client#PaymentsClient|PaymentsClient constructor}
+     * @returns {google.payments.api.PaymentsClient} Google Pay API client
+     */
+    function getGooglePaymentsClient() {
+      if ( paymentsClient === null ) {
+        paymentsClient = new google.payments.api.PaymentsClient({
+            environment: 'TEST',
+          paymentDataCallbacks: {
+            onPaymentAuthorized: onPaymentAuthorized
+          }
+        });
+      }
+      return paymentsClient;
+    }
+
+    /**
+     * Handles authorize payments callback intents.
+     *
+     * @param {object} paymentData response from Google Pay API after a payer approves payment through user gesture.
+     * @see {@link https://developers.google.com/pay/api/web/reference/response-objects#PaymentData object reference}
+     *
+     * @see {@link https://developers.google.com/pay/api/web/reference/response-objects#PaymentAuthorizationResult}
+     * @returns Promise<{object}> Promise of PaymentAuthorizationResult object to acknowledge the payment authorization status.
+     */
+    function onPaymentAuthorized(paymentData) {
+      return new Promise(function(resolve, reject){
         // handle the response
-        processPayment(paymentData);
-      })
-      .catch(function(err) {
-        // show error in developer console for debugging
-        console.error(err);
+        processPayment(paymentData)
+          .then(function() {
+            resolve({transactionState: 'SUCCESS'});
+          })
+          .catch(function() {
+            resolve({
+              transactionState: 'ERROR',
+              error: {
+                intent: 'PAYMENT_AUTHORIZATION',
+                message: 'Insufficient funds, try again. Next attempt should work.',
+                reason: 'PAYMENT_DATA_INVALID'
+              }
+            });
+    	    });
       });
-}
-/**
- * Process payment data returned by the Google Pay API
- *
- * @param {object} paymentData response from Google Pay API after user approves payment
- * @see {@link https://developers.google.com/pay/api/web/reference/response-objects#PaymentData|PaymentData object reference}
- */
-function processPayment(paymentData) {
-  // show returned data in developer console for debugging
-    
-    //let signature = "signature="
-    //let protocolVersion = "&protocolversion="
-    let token = paymentData.paymentMethodData.tokenizationData.token;
-    
-    //const obj = JSON.parse(token);
-    //window.location = "".concat(signature,obj.signature,protocolVersion,obj.protocolVersion);
-   console.log(paymentData);
-    //@todo pass payment token to your gateway to process payment
-   paymentToken = paymentData.paymentMethodData.tokenizationData.token;
-   window.location = "token=".concat(paymentToken);
-}</script>
+    }
+
+    /**
+     * Initialize Google PaymentsClient after Google-hosted JavaScript has loaded
+     *
+     * Display a Google Pay payment button after confirmation of the viewer's
+     * ability to pay.
+     */
+    function onGooglePayLoaded() {
+      const paymentsClient = getGooglePaymentsClient();
+      paymentsClient.isReadyToPay(getGoogleIsReadyToPayRequest())
+        .then(function(response) {
+          if (response.result) {
+            addGooglePayButton();
+          }
+        })
+        .catch(function(err) {
+          // show error in developer console for debugging
+          console.error(err);
+        });
+    }
+
+    /**
+     * Add a Google Pay purchase button alongside an existing checkout button
+     *
+     * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#ButtonOptions|Button options}
+     * @see {@link https://developers.google.com/pay/api/web/guides/brand-guidelines|Google Pay brand guidelines}
+     */
+    function addGooglePayButton() {
+      const paymentsClient = getGooglePaymentsClient();
+      const button =
+          paymentsClient.createButton({onClick: onGooglePaymentButtonClicked});
+      document.getElementById('container').appendChild(button);
+    }
+
+    /**
+     * Provide Google Pay API with a payment amount, currency, and amount status
+     *
+     * @see {@link https://developers.google.com/pay/api/web/reference/request-objects#TransactionInfo|TransactionInfo}
+     * @returns {object} transaction info, suitable for use as transactionInfo property of PaymentDataRequest
+     */
+    function getGoogleTransactionInfo() {
+      return {
+            displayItems: [
+            {
+              label: "Subtotal",
+              type: "SUBTOTAL",
+              price: "11.00",
+            },
+          {
+              label: "Tax",
+              type: "TAX",
+              price: "1.00",
+            }
+        ],
+        countryCode: 'US',
+        currencyCode: "USD",
+        totalPriceStatus: "FINAL",
+        totalPrice: "12.00",
+        totalPriceLabel: "Total"
+      };
+    }
+
+
+    /**
+     * Show Google Pay payment sheet when Google Pay payment button is clicked
+     */
+    function onGooglePaymentButtonClicked() {
+      const paymentDataRequest = getGooglePaymentDataRequest();
+      paymentDataRequest.transactionInfo = getGoogleTransactionInfo();
+
+      const paymentsClient = getGooglePaymentsClient();
+      paymentsClient.loadPaymentData(paymentDataRequest);
+    }
+
+    let attempts = 0;
+    /**
+     * Process payment data returned by the Google Pay API
+     *
+     * @param {object} paymentData response from Google Pay API after user approves payment
+     * @see {@link https://developers.google.com/pay/api/web/reference/response-objects#PaymentData|PaymentData object reference}
+     */
+    function processPayment(paymentData) {
+      return new Promise(function(resolve, reject) {
+        setTimeout(function() {
+          // @todo pass payment token to your gateway to process payment
+          paymentToken = paymentData.paymentMethodData.tokenizationData.token;
+
+    			if (attempts++ % 2 == 0) {
+    	      reject(new Error('Every other attempt fails, next one should succeed'));
+          } else {
+    	      resolve({});
+          }
+        }, 500);
+      });
+    }
+</script>
     <script async
             src="https://pay.google.com/gp/p/js/pay.js"
             onload="onGooglePayLoaded()"></script>
 </body>
 </html>
+
+<!--
+<html>
+<head>
+</head>
+<body>
+
+    <h1><center>Swift<center></h1>
+
+    <br>
+    <hr>
+    <br>
+
+    <font size="50">
+    <ul>
+        <li>Swift</li>
+        <li>HTML</li>
+        <li>AWESOME</li>
+        <li>More AWESOME</li>
+        <li>More More AWESOME</li>
+    </ul>
+    </font>
+
+    <br>
+    <hr>
+
+</body>
+</html>
+
+-->
