--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         #container {
           width: 500px;
           height: 50px;
+          margin: 0 auto;
         }
     </style>
     <meta charset="utf-8" />
@@ -229,7 +230,7 @@
     function addGooglePayButton() {
       const paymentsClient = getGooglePaymentsClient();
       const button =
-          paymentsClient.createButton({onClick: onGooglePaymentButtonClicked});
+          paymentsClient.createButton({onClick: onGooglePaymentButtonClicked,buttonSizeMode: 'fill'});
       document.getElementById('container').appendChild(button);
     }
 
