--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
         #container {
           width: 500px;
           height: 50px;
-          margin: 0 auto;
+          margin-top: 150px;
+          margin-bottom: 0px; 
+          margin-left: 0px; 
+          margin-right: 0px; 
         }
     </style>
     <meta charset="utf-8" />
