--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
         #container {
           width: 500px;
           height: 50px;
-          margin-top: 150px;
-          margin-bottom: 0px; 
-          margin-left: 0px; 
-          margin-right: 0px; 
+          margin: auto auto;
         }
     </style>
     <meta charset="utf-8" />
