--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         #container {
           width: 500px;
           height: 50px;
-          vertical-align: top;
+          vertical-align: middle;
         }
     </style>
     <meta charset="utf-8" />
