--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 <head>
     <style>
         #container {
-          width: 500px;
-          height: 50px;
-          vertical-align: baseline;
+            width: 500px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     </style>
     <meta charset="utf-8" />
