--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
         #container {
             width: 500px;
             height: 50px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            margin: 100px 50px 75px 50px;
         }
     </style>
     <meta charset="utf-8" />
