added pricing changes
added pricing changes

--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
               price: "0.00",
             }
         ],
-        countryCode: countryCode,
-        currencyCode: currencyCode,
+        countryCode: 'US',
+        currencyCode: 'USD',
         totalPriceStatus: "FINAL",
-        totalPrice: totalPrice,
+        totalPrice: '1',
         totalPriceLabel: "Total"
       };
     }
