fixed pricing string
fixed pricing string

--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
               price: "0.00",
             }
         ],
-        countryCode: 'US',
-        currencyCode: 'USD',
+        countryCode: "US",
+        currencyCode: "USD",
         totalPriceStatus: "FINAL",
-        totalPrice: '1',
+        totalPrice: "1",
         totalPriceLabel: "Total"
       };
     }
