--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
               price: "0.00",
             }
         ],
-        countryCode: "US",
-        currencyCode: "USD",
+        countryCode: ${countryCode},
+        currencyCode: ${currencyCode},
         totalPriceStatus: "FINAL",
-        totalPrice: "1",
+        totalPrice: ${totalPrice},
         totalPriceLabel: "Total"
       };
     }
