--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
               price: "0.00",
             }
         ],
-        countryCode: ${countryCode},
-        currencyCode: ${currencyCode},
+        countryCode:  ${window.countryCode},
+        currencyCode:  ${window.currencyCode},
         totalPriceStatus: "FINAL",
-        totalPrice: ${totalPrice},
+        totalPrice: ${window.totalPrice},
         totalPriceLabel: "Total"
       };
     }
