updated transaction changes
updated transaction changes

--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
               price: "0.00",
             }
         ],
-        countryCode:  ${window.countryCode},
-        currencyCode:  ${window.currencyCode},
+        countryCode:  countryCode,
+        currencyCode:  currencyCode,
         totalPriceStatus: "FINAL",
-        totalPrice: ${window.totalPrice},
+        totalPrice: totalPrice,
         totalPriceLabel: "Total"
       };
     }
