updated transaction info
updated transaction info

--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
               price: "0.00",
             }
         ],
-        countryCode:  countryCode,
-        currencyCode:  currencyCode,
+        countryCode:  "US",
+        currencyCode:  "USD",
         totalPriceStatus: "FINAL",
-        totalPrice: totalPrice,
+        totalPrice: "2",
         totalPriceLabel: "Total"
       };
     }
