--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@
               price: "0.00",
             }
         ],
-        countryCode:  "US",
-        currencyCode:  "USD",
+        countryCode:  `${countryCode}`,
+        currencyCode:  `${currencyCode}`,
         totalPriceStatus: "FINAL",
         totalPrice: "2",
         totalPriceLabel: "Total"
