--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@
         let currencyCodeData = urlParams.get('currencyCode');
         let countryCodeData = urlParams.get('countryCode');
         let totalPriceData = urlParams.get('totalPrice');
-        console.log(currencyCode);
-        console.log(countryCode);
-        console.log(totalPrice);
+        console.log(currencyCodeData);
+        console.log(countryCodeData);
+        console.log(totalPriceData);
         
       return {
             displayItems: [
