--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
               price: "0.00",
             }
         ],
-        countryCode:  currencyCodeData,
-        currencyCode:  currencyCodeData,
+        countryCode:  "US",
+        currencyCode:  "USD",
         totalPriceStatus: "FINAL",
         totalPrice: "2",
         totalPriceLabel: "Total"
