--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
               price: "0.00",
             }
         ],
-        countryCode:  "US",
-        currencyCode:  "USD",
+        countryCode:  "UK",
+        currencyCode:  "GBP",
         totalPriceStatus: "FINAL",
         totalPrice: "2",
         totalPriceLabel: "Total"
