updated price value
updated price value

--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
               price: "0.00",
             }
         ],
-        countryCode:  "UK",
-        currencyCode:  "GBP",
+        countryCode:  countryCodeData,
+        currencyCode:  currencyCodeData,
         totalPriceStatus: "FINAL",
         totalPrice: "2",
         totalPriceLabel: "Total"
