--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
       paymentDataRequest.merchantInfo = {
         // @todo a merchant ID is available for a production environment after approval by Google
         // See {@link https://developers.google.com/pay/api/web/guides/test-and-deploy/integration-checklist|Integration checklist}
-        merchantId: '01234567890123456789',
-        merchantName: 'Example Merchant'
+        merchantId: '12345678901234567890',
+        merchantName: 'CeX Ltd'
       };
 
       paymentDataRequest.callbackIntents = ["PAYMENT_AUTHORIZATION"];
