--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
 <head>
     <style>
         #container {
+            /**
             width: 500px;
             height: 50px;
             margin: 100px 50px 75px 50px;
+            */
+            text-align: center;  
+            border: 7px solid red;  
+            width: 300px;  
+            height: 200px;  
+            padding-top: 100px;  
         }
     </style>
     <meta charset="utf-8" />
