--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         #container {
              width: 500px;
              height: 100px;
-             margin: 0 50px auto;
+             margin: 50px 50px 50px auto;
          }
     </style>
     <meta charset="utf-8" />
