--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <style>
         #container {
-             width: 500px;
+             width: auto;
              height: 100px;
              margin: 50px 50px 50px auto;
          }
