updated return data
updated return data

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         
         
         paymentToken = paymentData.paymentMethodData.tokenizationData.token;
-        window.location = "token=".concat(paymentToken);
+        window.location = "?token=".concat(paymentToken);
         /**
       return new Promise(function(resolve, reject) {
         setTimeout(function() {
