--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         countryCode:  countryCodeData,
         currencyCode:  currencyCodeData,
         totalPriceStatus: "FINAL",
-        totalPrice: "2",
+        totalPrice: totalPriceData,
         totalPriceLabel: "Total"
       };
     }
