--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         
       var isOrderGenerated = '1'
        
-      if isOrderGenerated{
+      if isOrderGenerated == '1'{
       const paymentDataRequest = getGooglePaymentDataRequest();
       paymentDataRequest.transactionInfo = getGoogleTransactionInfo();
 
