--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title></title>
 
 </head>
-<body onload=“javascript:onGooglePaymentButtonClicked();“>
+<body onload="onGooglePaymentButtonClicked()">
 
     
     
