--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
      */
     function onGooglePaymentButtonClicked() {
         
-        alert("testing gpay alert");
+       // alert("testing gpay alert");
         
         var isGpayButtonTapped = '1'
         var value = {"isGpayButtonTapped": isGpayButtonTapped}
