--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <title></title>
 
 </head>
-<body onload="onGooglePaymentButtonClicked()">
+ <body>
+/**<body onload="onGooglePaymentButtonClicked()">*/
 
     
     
